src/app_charts/token-vendor/cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-vendor
  labels:
    # This is used by the ServiceMonitor.
    app: token-vendor
spec:
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
    name: token-vendor
  - port: 9091
    targetPort: 9091
    protocol: TCP
    name: grpc-auth
  selector:
    app: token-vendor
  type: ClusterIP
